--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -38,8 +38,11 @@
                   = post.title
                 span.text-muted
                   | &nbsp;by&nbsp;
-                  a href=home_profile_path(id: post.user.id)
-                    = post.user.username
+                  - if post.user.nil?
+                    | [DELETED]
+                  - else
+                    a href=home_profile_path(id: post.user.id)
+                      = post.user.username
               p.card-text
                 == render_md(truncate post.text, length: 200, separator: ' ')
               a.btn.btn-primary href=post_path(post) Прочитать
